--- a/tasks.config.json
+++ b/tasks.config.json
@@ -8,10 +8,10 @@
         "sourceOfComponents": "Server",
         "devBuild": false,
         "serverType": "infinity",
-        "server": "",
-        "clientId": "",
+        "server": "https://labbconsulting07.pegalabs.io/prweb",
+        "clientId": "88338190982329501318",
         "clientSecret_comment": "Needed only when using 'passwordCreds' or 'clientCreds' grantType",
-        "clientSecret": "",
+        "clientSecret": "69A53194538EE61CE20A7593C16DEAD7",
         "grantType": "clientCreds",
         "redirectUri": "https://localhost:4010/",
         "authService_comment": "Infinity authentication service alias (when grantType is set to 'authCode')",
